add RSVP email address

--- a/indexDefault.html
+++ b/indexDefault.html
@@ -73,12 +73,15 @@
 
         <!-- start of hero -->
         <section class="hero">
-            <div class="static-hero"></div>
+            <div class="hero-slider hero-slider-s1">
+                <div class="slide-item">
+                    <img src="images/slider/slide-1.jpg" alt class="slider-bg">
+                </div>
 
-            <div id="spirit-header" class="spirit-header">
-                <canvas id="spirit-canvas"></canvas>
+                <div class="slide-item">
+                    <img src="images/slider/slide-2.jpg" alt class="slider-bg">
+                </div>
             </div>
-
             <div class="wedding-announcement">
                 <div class="couple-name-merried-text">
                     <h2 class="wow slideInUp" data-wow-duration="1s">Suntina &amp; Famico</h2>
@@ -118,7 +121,6 @@
             </div>
         </section>
         <!-- end of hero slider -->
-
 
         <!-- Start header -->
         <header id="header" class="site-header header-style-1">
@@ -340,6 +342,7 @@
             </div> <!-- end container -->
         </section>
         <!-- end cta -->
+
 
 
         <!-- start events-section -->
@@ -722,6 +725,7 @@
         <!-- end gallery-section -->
 
 
+
         <!-- start rsvp-section -->
         <section class="rsvp-section section-padding parallax" data-bg-image="images/rsvp-bg.jpg" data-speed="7" id="rsvp">
             <div class="container">
@@ -875,7 +879,6 @@
 
     <!-- Plugins for this template -->
     <script src="js/jquery-plugin-collection.js"></script>
-    <script src="js/spirit.js"></script>
 
     <!-- Custom script for this template -->
     <script src="js/script.js"></script>
