--- a/blog-details.html
+++ b/blog-details.html
@@ -64,7 +64,7 @@
                         <h2>Blog</h2>
                         <div class="breadcrumb">
                             <ul>
-                                <li><a href="indexDefault.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li>Blog</li>
                             </ul>
                         </div>
@@ -91,13 +91,13 @@
                     <div id="navbar" class="navbar-collapse collapse navbar-right navigation-holder">
                         <button class="close-navbar"><i class="fa fa-close"></i></button>
                         <ul class="nav navbar-nav">
-                            <li><a href="indexDefault.html#home">Home</a></li>
-                            <li><a href="indexDefault.html#couple">Couple</a></li>
-                            <li><a href="indexDefault.html#story">Story</a></li>
-                            <li><a href="indexDefault.html#events">Events</a></li>
-                            <li><a href="indexDefault.html#people">People</a></li>
-                            <li><a href="indexDefault.html#gallery">Gallery</a></li>
-                            <li><a href="indexDefault.html#rsvp">RSVP</a></li>
+                            <li><a href="index.html#home">Home</a></li>
+                            <li><a href="index.html#couple">Couple</a></li>
+                            <li><a href="index.html#story">Story</a></li>
+                            <li><a href="index.html#events">Events</a></li>
+                            <li><a href="index.html#people">People</a></li>
+                            <li><a href="index.html#gallery">Gallery</a></li>
+                            <li><a href="index.html#rsvp">RSVP</a></li>
                             <li class="menu-item-has-children current-menu-ancestor">
                                 <a href="javascript:void(0);">Blog</a>
                                 <ul class="sub-menu">
