--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Page Title -->
-    <title> 翁祖建 & 徐梦雪</title>
+    <title> 翁祖建 & 徐梦雪 </title>
 
     <!-- Favicon and Touch Icons -->
     <link href="images/favicon/favicon.png" rel="shortcut icon" type="image/png">
@@ -82,7 +82,7 @@
 
             <div class="wedding-announcement">
                 <div class="couple-name-merried-text">
-                    <h2 class="wow slideInUp" data-wow-duration="1s">Suntina &amp; Famico</h2>
+                    <h2 class="wow slideInUp" data-wow-duration="1s">翁祖建 &amp; 徐梦雪</h2>
                     <div class="married-text wow fadeIn" data-wow-delay="1s">
                         <h4 class="">
                         <span class=" wow fadeInUp" data-wow-delay="1.05s">W</span>
@@ -113,8 +113,8 @@
                 </div>
 
                 <div class="save-the-date">
-                    <h4>Save the date</h4>
-                    <span class="date">25 DEC 2017</span>
+                    <h4>婚礼日期</h4>
+                    <span class="date">2018.02.03</span>
                 </div>
             </div>
         </section>
