--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </button>
 
             <div class="music-holder">
-                <!-- <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102137206&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe> -->
-                <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=3&id=909029753&auto=1&height=66"></iframe>
+                <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102137206&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
+                <!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=3&id=909029753&auto=1&height=66"></iframe> -->
             </div>
         </div>
         <!-- end music box -->
@@ -133,24 +133,24 @@
                             <span class="icon-bar"></span>
                         </button>
                         <div class="couple-logo">
-                            <h1><a href="#home">S <i class="fi flaticon-shape-1"></i> F</a></h1>
+                            <h1><a href="#home">W <i class="fi flaticon-shape-1"></i> X</a></h1>
                         </div>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse navbar-right navigation-holder">
                         <button class="close-navbar"><i class="fa fa-close"></i></button>
                         <ul class="nav navbar-nav">
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#couple">Couple</a></li>
-                            <li><a href="#story">Story</a></li>
-                            <li><a href="#events">Events</a></li>
-                            <li><a href="#people">People</a></li>
-                            <li><a href="#gallery">Gallery</a></li>
-                            <li><a href="#rsvp">RSVP</a></li>
+                            <li><a href="#home">首页</a></li>
+                            <li><a href="#couple">我们</a></li>
+                            <li><a href="#story">故事</a></li>
+                            <li><a href="#events">婚礼</a></li>
+                            <li><a href="#people">伴娘&伴郎</a></li>
+                            <li><a href="#gallery">相册</a></li>
+                            <li><a href="#rsvp">报名</a></li>
                             <li class="menu-item-has-children">
-                                <a href="javascript:void(0);">Blog</a>
+                                <a href="javascript:void(0);">其他</a>
                                 <ul class="sub-menu">
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
+                                    <li><a href="blog.html">博客</a></li>
+                                    <li><a href="blog-details.html">留言</a></li>
                                     <li class="menu-item-has-children">
                                         <a href="#Level3">Thidr level</a>
                                         <ul class="sub-menu">
@@ -176,17 +176,17 @@
                     <div class="col col-xs-12">
                         <div class="gb groom">
                             <div class="img-holder wow fadeInLeftSlow">
-                                <img src="images/couple/img-1.jpg" alt>
+                                <img src="http://p0myo90fu.bkt.clouddn.com/a%20%2847%29_1_%E5%89%AF%E6%9C%AC.jpg" alt>
                             </div>
                             <div class="details">
                                 <div class="details-inner">
-                                    <h3>The groom</h3>
-                                    <p>Hi I am suntina , dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-                                    <span class="signature">Suntina</span>
+                                    <h3>新郎</h3>
+                                    <p>大家好我是翁祖建 , dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                                    <span class="signature">翁祖建</span>
                                     <ul class="social-links">
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-wechat"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-github"></i></a></li>
                                         <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                     </ul>
                                 </div>
@@ -195,19 +195,19 @@
                         <div class="gb bride">
                             <div class="details">
                                 <div class="details-inner">
-                                    <h3>The Bride</h3>
-                                    <p>Hi I am suntina , dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-                                    <span class="signature">Famico</span>
+                                    <h3>新娘</h3>
+                                    <p>大家好我是徐梦雪 , dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                                    <span class="signature">徐梦雪</span>
                                     <ul class="social-links">
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-wechat"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-weibo"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                         <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="img-holder wow fadeInRightSlow">
-                                <img src="images/couple/img-2.jpg" alt>
+                                <img src="http://p0myo90fu.bkt.clouddn.com/bride_%E5%89%AF%E6%9C%AC.jpg" alt>
                             </div>
                         </div>
                     </div>
@@ -218,11 +218,11 @@
 
 
         <!-- start count-down-section -->
-        <section class="count-down-section section-padding parallax" data-bg-image="images/countdown-bg.jpg" data-speed="7">
+        <section class="count-down-section section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/bg/love%20adventure.jpg" data-speed="7">
             <div class="container">
                 <div class="row">
                     <div class="col col-md-4">
-                        <h2><span>We are waiting for.....</span> The adventure</h2>
+                        <h2><span>婚礼倒计时.....</span> The adventure</h2>
                     </div>
                     <div class="col col-md-7 col-md-offset-1">
                         <div class="count-down-clock">
@@ -244,7 +244,7 @@
                     <div class="col col-xs-12">
                         <div class="section-title">
                             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-                            <h2>Our love story</h2>
+                            <h2>我们爱的故事</h2>
                         </div>
                     </div>
                 </div> <!-- end section-title -->
@@ -331,7 +331,7 @@
 
 
         <!-- start cta -->
-        <section class="cta section-padding parallax" data-bg-image="images/cta-bg.jpg" data-speed="7">
+        <section class="cta section-padding parallax" data-bg-image="http://p0myo90fu.bkt.clouddn.com/fireworks.jpg" data-speed="7">
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
