--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                             <div class="details">
                                 <div class="details-inner">
                                     <h3>新郎</h3>
-                                    <p>大家好我是翁祖建 , dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                                    <p>大家好，欢迎来到我们的婚礼。我是一个自诩浪漫又闷骚的程序员。业余时间除了和徐同学厮混外，还喜欢和朋友们玩玩游戏。当然，因为和徐同学在一起，玩游戏大概率是不存在的（打开王者荣耀图标就被威胁要拍照给丈母娘？）。我和徐同学恋爱时间不短了，感谢她这几年的付出和包容，把我从青葱少年拔成烫头大叔，我也度过非常开心的大学和研究生生涯。所谓先成家后立业，我们一致决定，
+                                        在我步入工作岗位前举行婚礼仪式，请各位亲朋莅临见证我们爱的仪式。</p>
                                     <span class="signature">翁祖建</span>
                                     <ul class="social-links">
                                         <li><a href="#"><i class="fa fa-wechat"></i></a></li>
@@ -255,9 +256,10 @@
                             <div class="row">
                                 <div class="col col-md-6">
                                     <div class="story-text right-align-text">
-                                        <h3>First meet</h3>
-                                        <span class="date">Jan 12 2017</span>
-                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
+                                        <h3>第一眼</h3>
+                                        <span class="date">Sep 01 2008</span>
+                                        <p>唉？那个女生长得不错啊，很白<br>咦？她还主动当我们小组长？哦，叫徐梦雪啊<br>怎么看着有点高冷啊，是不是脾气很坏啊。<br>
+                                            你看她军训那照片就知道了。</p>
                                     </div>
                                 </div>
                                 <div class="col col-md-6">
@@ -278,9 +280,9 @@
                                         <i class="fa fa-heart"></i>
                                     </span>
                                     <div class="story-text">
-                                        <h3>First date</h3>
-                                        <span class="date">Feb 14 2017</span>
-                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
+                                        <h3>约会</h3>
+                                        <span class="date">Oct 01 2011</span>
+                                        <p>"哎？ADC呢？团战怎么不见人啊。"<br>"4点半有重要会晤，我先撤退，去梳头。"<br>"老哥，现在才3点啊"</p>
                                     </div>
                                 </div>
                             </div>
@@ -290,9 +292,9 @@
                                         <i class="fa fa-heart"></i>
                                     </span>
                                     <div class="story-text right-align-text">
-                                        <h3>Proposal</h3>
-                                        <span class="date">Apr 14 2017</span>
-                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
+                                        <h3>求婚</h3>
+                                        <span class="date">Jan 24 2017</span>
+                                        <p>大家准备好没？我们要从河边走过去了，马上。<br>吉他手要装得像一点啊。烟花爆破手准备。看我眼神。<br>一切完美结束...<br>摄影组人呢？还TM在草丛埋伏呢？</p>
                                     </div>
                                 </div>
                                 <div class="col col-md-6">
@@ -316,9 +318,9 @@
                                         <i class="fa fa-heart"></i>
                                     </span>
                                     <div class="story-text">
-                                        <h3>Enagagement</h3>
-                                        <span class="date">Jul 14 2017</span>
-                                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
+                                        <h3>订婚</h3>
+                                        <span class="date">Jan 25 2017</span>
+                                        <p>家长们喝酒喝醉了，都说是因为开心。<br>我想岳父还是难免心酸，毕竟小公举要跟人走了。<br>请岳父放心，我从您这接管了徐同学，一定对她好。</p>
                                     </div>
                                 </div>
                             </div>
@@ -335,7 +337,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-xs-12">
-                        <h2><span>We are going to...</span> Celebrate Our Love</h2>
+                        <h2><span>我们即将...</span>走入婚姻殿堂</h2>
                     </div>
                 </div> <!-- end row -->
             </div> <!-- end container -->
@@ -362,14 +364,14 @@
                                 <img src="images/events/img-1.jpg" alt class="img img-responsive">
                             </div>
                             <div class="details">
-                                <h3>The reception</h3>
+                                <h3>接亲</h3>
                                 <ul>
-                                    <li><i class="fa fa-map-marker"></i> 32 big bro road, Chanpai, London.</li>
-                                    <li><i class="fa fa-clock-o"></i> Nov 25 2017, 9AM - 5PM</li>
+                                    <li><i class="fa fa-map-marker"></i>福建省福清市清昌大道融侨城13号楼</li>
+                                    <li><i class="fa fa-clock-o"></i>2018年02月13号 早晨9点</li>
                                 </ul>
-                                <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-                                <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">
-                                    See location <i class="fa fa-angle-right"></i>
+                                <p>我将带上阵容强大的伴郎团，从我家出发，把徐梦雪同学迎娶到福清乡下老家。参加接亲仪式的朋友们需要在此时间点到达福清。</p>
+                                <a class="see-location-btn popup-gmaps" href="BaiduMap.html">
+                                    查看地图 <i class="fa fa-angle-right"></i>
                                 </a>
                             </div>
                         </div>
@@ -378,14 +380,14 @@
                                 <img src="images/events/img-2.jpg" alt class="img img-responsive">
                             </div>
                             <div class="details">
-                                <h3>Wedding party</h3>
+                                <h3>结婚礼堂</h3>
                                 <ul>
-                                    <li><i class="fa fa-map-marker"></i> 32 big bro road, Chanpai, London.</li>
-                                    <li><i class="fa fa-clock-o"></i> Nov 25 2017, 9AM - 5PM</li>
+                                    <li><i class="fa fa-map-marker"></i>福建省福清市创元千禧酒店紫荆厅</li>
+                                    <li><i class="fa fa-clock-o"></i>2018年02月13号 下午5点</li>
                                 </ul>
                                 <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-                                <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.0160484383277!2d144.99053291585201!3d-37.81309307975254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642ef89a7e023%3A0xb1353055e38c1ab8!2sNew+York+Tomato+Cafe!5e0!3m2!1sbn!2sbd!4v1503743893919">
-                                    See location <i class="fa fa-angle-right"></i>
+                                <a class="see-location-btn popup-gmaps" href="PartyBaiduMap.html">
+                                    查看地图 <i class="fa fa-angle-right"></i>
                                 </a>
                             </div>
                         </div>
