--- a/BaiduMap.html
+++ b/BaiduMap.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
@@ -9,7 +8,7 @@
         #allmap{width:100%;height:100%;}
         p{margin-left:5px; font-size:14px;}
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=41s1Dj7D0zLvOIIWIVf5HQQSN8ikhoZl"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=41s1Dj7D0zLvOIIWIVf5HQQSN8ikhoZl&s=1"></script>
     <title>接亲地址</title>
 </head>
 <body>
