--- a/BaiduMap.html
+++ b/BaiduMap.html
@@ -8,7 +8,7 @@
         #allmap{width:100%;height:100%;}
         p{margin-left:5px; font-size:14px;}
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=41s1Dj7D0zLvOIIWIVf5HQQSN8ikhoZl&s=1"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=41s1Dj7D0zLvOIIWIVf5HQQSN8ikhoZl&s=1"></script>
     <title>接亲地址</title>
 </head>
 <body>
